# tdes

./: .config.toml.swp  .gitignore  Cargo.toml  config.toml  ideas.txt
config/: out.toml
examples/dglm/: config.yaml
examples/evaluation/: config.yaml
examples/example/: config.yaml
examples/flow_updating/: config.yaml
examples/proposal_evaluation/: config.yaml
examples/simple_message/: config.yaml
src/: example_peer.rs  flow_updating_peer.rs  main.rs
src/internal/: context.rs  macros.rs  message.rs  message_passing.rs  mod.rs  peer.rs  simulator.rs  utils.rs
src/internal/cli/: args.rs  config.rs  mod.rs  utils.rs
src/internal/core/: context.rs  delay_modifiers.rs  distributions.rs  experiment.rs  hooks.rs  log.rs  macros.rs  message.rs  message_passing.rs  mod.rs  peer.rs
src/internal/events/: mod.rs
src/scenarios/: mod.rs
src/scenarios/distributed_generalized_linear_model/: algorithms.rs  callbacks.rs  data.rs  generalized_linear_model.rs  hooks.rs  message.rs  mod.rs  peer.rs  timer.rs  timers.rs
src/scenarios/example/: message.rs  mod.rs  peer.rs
src/scenarios/flow_updating_pairwise/: algorithms.rs  callbacks.rs  hooks.rs  message.rs  mod.rs  peer.rs  timer.rs
src/scenarios/proposed_dglm/: algorithms.rs  callbacks.rs  discovery.rs  generalized_linear_model.rs  hooks.rs  improve.rs  message.rs  mod.rs  peer.rs  timers.rs
src/scenarios/simple_message/: messages.rs  mod.rs  peers.rs  scenario.rs  starts.rs
src/simulations/: mod.rs
src/simulations/distributed_generalized_linear_model/: algorithms.rs  callbacks.rs  (+7 more)
tmp/: config.toml
(+59 files in other folders)
