[package]
name = "tdes"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
downcast-rs = "2.0.1"
enum_dispatch = "0.3.13"
faer = "0.22.6"
indexmap = "2.9.0"
ordered-float = "5.0.0"
paste = "1.0.15"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
